skins/larry/mail.css
/* ... */
#messagelist tbody tr td.attachment span.attachment {
	background-position: 0 -996px;
}

#messagelist thead tr td.attachment span.attachment {
	background-position: -24px -997px;
}

#messagelist tbody tr td.attachment span.report {
	background-position: -24px -1116px;
}

#messagelist tr td.priority span.prio5 {
	background-position: 0 -1905px;
}

#messagelist tr td.priority span.prio4 {
	background-position: 0 -1885px;
}

#messagelist tr td.priority span.prio2 {
	background-position: 0 -1865px;
}

#messagelist tr td.priority span.prio1 {
	background-position: 0 -1845px;
}

#messagelist tbody tr td.flag span.flagged {
	background-position: 0 -1036px;
}

#messagelist thead tr td.flag span.flagged {
	background-position: -24px -1036px;
}

#messagelist tr td.status span.msgicon:hover {
	background-position: -23px -1056px;
}

#messagelist tr td.flag span.unflagged:hover {
	background-position: -23px -1076px;
}

#messagelist tr td.subject span.msgicon,
#messagelist tr td.subject span.unreadchildren {
	background-position: 0 -1056px;
	margin: 0 1px 0 0;
	width: 24px;
}

#messagelist tr td.subject span.replied {
	background-position: 0 -1076px;
}

#messagelist tr td.subject span.forwarded {
	background-position: 0 -1096px;
}

#messagelist tr td.subject span.replied.forwarded {
	background-position: 0 -1116px;
}

#messagelist tr td.status span.msgicon,
#messagelist tr td.flag span.unflagged,
#messagelist tr td.status span.unreadchildren {
	background-position: 0 1056px; /* no icon */
}
/*
#messagelist tr td.status span.msgicon:hover {
	background-position: 0 -272px;
}
*/
#messagelist tr td.status span.deleted,
#messagelist tr td.status span.deleted:hover,
#messagelist tr td.subject span.deleted {
	background-position: -22px -1096px;
}

#messagelist tr td.status span.status,
#messagelist tr td.status span.unread,
#messagelist tr td.subject span.unread,
#messagelist tr td.status span.unread:hover {
	background-position: 0 -1016px;
}

#messagelist thead tr td.status span.status {
	background-position: -24px -1016px;
}

#messagelist tr td div.collapsed {
	background-position: 0 -1137px;
	cursor: pointer;
}

#messagelist tr td div.expanded {
	background-position: 0 -1157px;
	cursor: pointer;
}

#messagelist tr td.threads div.listmenu {
	background-position: 0 -976px;
	cursor: pointer;
	width: 26px;
}

#messagelist thead tr td.subject,
#messagelist tbody tr td.subject {
	width: 99%;
	white-space: nowrap;
}

#messagelist tbody tr td.subject a {
	cursor: default;
	vertical-align: middle; /* #1487091 */
}

/* thread parent message with unread children */
#messagelist tbody tr.unroot td.subject a {
	text-decoration: underline;
}

/**** tree indicators ****/

#messagelist tbody tr td span.branch div {
	display: inline-block;
}

#messagelist tbody tr td span.branch div.tree {
	width: 15px;
}

#listoptions ul.proplist {
	min-width: 16em;
}

/**** message view ****/

#mailpreviewframe {
	display: none;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	bottom: 28px;
}

#messagecontframe {
	border: 0;
	border-radius: 4px 4px 0 0;
}

#messagecontent {
	position: absolute;
	top: 110px;
	left: 0;
	width: 100%;
	bottom: 27px;
	overflow: auto;
}

#messageheader,
#partheader,
#composeheaders {
	position: relative;
	padding: 3px 0;
	background: #f9f9f9;
	background: -moz-linear-gradient(top, #fff 0%, #f0f0f0 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fff), color-stop(100%,#f0f0f0));
	background: -o-linear-gradient(top, #fff 0%, #f0f0f0 100%);
	background: -ms-linear-gradient(top, #fff 0%, #f0f0f0 100%);
	background: linear-gradient(top, #fff 0%, #f0f0f0 100%);
	border-bottom: 1px solid #dfdfdf;
}

#mailview-right #messageheader {
	border-radius: 4px 4px 0 0;
	padding-left: 78px;
	/* avoid headers eating up all the vertical space */
	max-height: 50%;
	overflow: auto;
}

h2.subject {
	font-size: 15px;
	margin: 0 15em 0 0;
	padding: 4px 8px 2px 8px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

#mailview-right #messageheader h2.subject {
	margin-left: -56px;
}

h3.subject {
	font-size: 14px;
	margin: 0 8em 0 0;
	padding: 8px 8px 4px 8px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.headers-table td {
	color: #666;
	padding: 2px 8px;
}

.headers-table td.header,
.ui-dialog-content.popup span.adr {
	font-weight: bold;
}

.headers-table td.header-title {
	white-space: nowrap;
}

.headers-table td.header a,
.ui-dialog-content.popup span.adr a {
	color: #666;
	text-decoration: none;
}

.headers-table td.header a:hover,
.ui-dialog-content.popup span.adr a:hover {
	text-decoration: underline;
}

.headers-table td.subject {
	color: #333;
	font-size: 110%;
	font-weight: bold;
}

.headers-table td.header span,
.ui-dialog-content.popup span.adr {
	white-space: nowrap;
}

.headers-table td.header a.morelink {
	color: #0069a6;
	white-space: nowrap;
	font-weight: normal;
}

.rcmaddcontact {
	position: relative;
	top: 1px;
	margin-left: 0.5em;
}

.rcmaddcontact imp {
	width: 20px;
	height: 13px;
}

#preview-allheaders {
	display: none;
}

#preview-allheaders td.header-title,
#preview-shortheaders td.header-title {
	padding-left: 0;
}

#preview-shortheaders td.header {
	padding-right: 18px;
}

.moreheaderstoggle {
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	width: 18px;
	padding: 0;
	outline: none;
	background: #f2f2f2;
	background: -moz-linear-gradient(left, #fbfbfb 0, #e9e9e9 100%);
	background: -webkit-gradient(linear, left top, right top, color-stop(0,#fbfbfb), color-stop(100%,#e9e9e9));
	background: -o-linear-gradient(left, #fbfbfb 0, #e9e9e9 100%);
	background: -ms-linear-gradient(left, #fbfbfb 0, #e9e9e9 100%);
	background: linear-gradient(left, #fbfbfb 0, #e9e9e9 100%);
	border-right: 1px solid #dfdfdf;
	border-radius: 3px 0 0 0; /* for Opera */
}
/* ... */

